New Imgur browser app.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "BASE_URL",
-                getProperty("$projectDir/../../../services/imgur2.properties", "base_url")
+                getProperty("$projectDir/../../../services/imgur.properties", "base_url")
         buildConfigField "String", "CLIENT_ID",
-                getProperty("$projectDir/../../../services/imgur2.properties", "client_id")
+                getProperty("$projectDir/../../../services/imgur.properties", "client_id")
 
     }
 
